[package]
name = "zenoh-queryable"
version = "0.1.0"
authors = [
	"Luca Cominardi <luca.cominardi@adlinktech.com>",
	"kydos <angelo@icorsaro.net>",
    "Julien Enoch <julien@enoch.fr>",
    "Olivier Hécart <olivier.hecart@adlinktech.com"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "=1.6.2", features = ["attributes"] }
zenoh = "=0.5.0-beta.1"
